# outreach-pipeline

./: .env.example  .gitignore  Procfile  README.md  app.py  deploy.sh  pyproject.toml  render.yaml  requirements.txt
src/outreach_pipeline/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  http_client.py  models.py  pipeline.py
src/outreach_pipeline/stages/: __init__.py  brevo.py  eazyreach.py  ocean.py  prospeo.py
src/outreach_pipeline/templates/: outreach.txt
tests/: test_checkpoint.py  test_models.py  test_pipeline.py
