[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outreach-pipeline"
version = "1.0.0"
description = "Automated cold-outreach pipeline: seed domain → lookalikes → decision-makers → verified emails → sent outreach"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
outreach = "outreach_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"outreach_pipeline.templates" = ["*.txt"]
